// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-alarm-form Renders \`storage-settings-alarm-form\` with custom form and history 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Alarms
    </div>
    <!---->
  </div>
  <div
    class="layout mt-2"
  >
    <span
      class="text--secondary"
    >
      <storage-settings-history-message-stub
        archivedcountmessagekey="storageSetting.history.alarm.archivedCount"
        deletedcountmessagekey="storageSetting.history.alarm.deletedCount"
        history="[object Object]"
      />
    </span>
  </div>
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Archive resolved alarms data"
    name="alarm.archive_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete resolved alarms data"
    name="alarm.delete_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
</div>
`;

exports[`storage-settings-alarm-form Renders \`storage-settings-alarm-form\` with default form 1`] = `
<div
  class="layout c-information-block column"
>
  <div
    class="layout"
  >
    <div
      class="text-subtitle-1 font-weight-bold"
    >
      Alarms
    </div>
    <!---->
  </div>
  <!---->
  <c-enabled-duration-field-stub
    hide-value-on-false=""
    label="Archive resolved alarms data"
    name="alarm.archive_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
  <c-enabled-duration-field-stub
    after="[object Object]"
    hide-value-on-false=""
    label="Delete resolved alarms data"
    name="alarm.delete_after"
    suffix="After"
    switcher=""
    value="[object Object]"
  />
</div>
`;
